# KosmOSS

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: python.yml  rust.yml
src/: constants.rs  lib.rs  main.rs
src/config/: mod.rs  spacecraft.rs
src/coordinates/: coordinate_transformation.rs  eop_errors.rs  eop_manager.rs  mod.rs
src/fsm/: mod.rs  spacecraft_states.rs  state_machine.rs
src/gnc/: mod.rs
src/gnc/control/: attitude_controller.rs  mod.rs
src/gnc/guidance/: hohmann.rs  mod.rs
src/integrators/: rk4.rs  rk8.rs
src/models/: mod.rs  spacecraft.rs  state.rs
src/numerics/: quaternion.rs
src/physics/: attitude.rs  drag.rs  dynamics.rs  energy.rs  environment.rs  gravity.rs  mod.rs  orbital.rs
tests/: integration.rs
viz/: plotMissionDashboard.py  requirements.txt
viz/tests/: test_placeholder.py
